fix center alignment of title header

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ a {
 
 .header h1 {
   margin-bottom: 0;
+  margin-right: 5%;
 }
 
 .header h4 {
